# ncurses-st-menu

./: .gitignore  CMakeLists.txt  Makefile  configure  configure.ac
demo/: CMakeLists.txt  demo.c  simple.c  simple2.c
include/: CMakeLists.txt  st_config.h.in  st_menu.h
src/: CMakeLists.txt  st_menu.c  st_menu_styles.c
