cmake_minimum_required(VERSION 3.0)
project(st_menu C)

include(FindPkgConfig)
include(CheckIncludeFile)
include(InstallRequiredSystemLibraries)
include(GNUInstallDirs)
list(APPEND CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -Wno-conversion")
check_include_file("string.h" HAVE_STRING_H)
check_include_file("ctype.h" HAVE_CTYPE_H)
check_include_file("stdlib.h" HAVE_STDLIB_H)
check_include_file("wchar.h" HAVE_WCHAR_H)
check_include_file("locale.h" HAVE_LOCALE_H)
check_include_file("stdbool.h" HAVE_STDBOOL_H)
## look for ncursesw and ncursesw-panel
pkg_check_modules(NCURSESW REQUIRED ncursesw)
pkg_check_modules(NCURSESWPANEL REQUIRED panelw)
if (NCURSESW_FOUND)
    include_directories(${NCURSESW_INCLUDE_DIRS})
    link_directories(${NCURSESW_LIBRARY_DIRS})
    check_include_file("ncursesw/ncurses.h" HAVE_NCURSESW_CURSES_H)
    check_include_file("ncursesw.h" HAVE_NCURSESW_H)
    check_include_file("ncursesw/panel.h" HAVE_NCURSESW_PANEL_H)
    set(NCURSESW_LIBRARIES ${NCURSESWPANEL_LIBRARIES} ${NCURSESW_LIBRARIES})
else (NCURSESW_FOUND)
    check_include_file("ncurses/curses.h" HAVE_NCURSES_CURSES_H)
    check_include_file("ncurses.h" HAVE_NCURSES_H)
    check_include_file("curses.h" HAVE_CURSES_H)
    check_include_file("ncurses/panel.h" HAVE_NCURSES_PANEL_H)
    check_include_file("panel.h" HAVE_PANEL_H)
    if (HAVE_NCURSES_H OR HAVE_CURSES_H OR HAVE_NCURSES_CURSES_H
        OR HAVE_PANEL_H OR HAVE_NCURSES_PANEL_H)
        set(NCURSESW_LIBRARIES ncurses panel)
    else (HAVE_NCURSES_H OR HAVE_CURSES_H OR HAVE_NCURSES_CURSES_H
        OR HAVE_PANEL_H OR HAVE_NCURSES_PANEL_H)
        message(FATAL_ERROR "Did not find ncursesw, please install it")
    endif (HAVE_NCURSES_H OR HAVE_CURSES_H OR HAVE_NCURSES_CURSES_H
        OR HAVE_PANEL_H OR HAVE_NCURSES_PANEL_H)
endif (NCURSESW_FOUND)
## look for libunistring
check_include_file("unistr.h" HAVE_LIBUNISTRING)
if (NOT HAVE_LIBUNISTRING)
    message(FATAL_ERROR "Please install libunistring-dev")
else (NOT HAVE_LIBUNISTRING)
    set(UNISTRING_LIBRARIES unistring)
endif (NOT HAVE_LIBUNISTRING)
check_include_file("langinfo.h" HAVE_LANGINFO_CODESET)
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_definitions(-DDEBUG_PIPE)
endif (CMAKE_BUILD_TYPE STREQUAL "Debug")
## look for package config
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${CMAKE_CURRENT_BINARY_DIR}/include)
add_subdirectory(include)
add_subdirectory(src)
add_subdirectory(demo)

if (CMAKE_INSTALL_PREFIX)
    set(prefix ${CMAKE_INSTALL_PREFIX})
    set(exec_prefix ${prefix}/bin)
    set(libdir ${prefix}/lib)
    set(includedir ${prefix}/include)
    set(PACKAGE_VERSION 1.0)
    configure_file(st_menu.pc.in st_menu.pc @ONLY)
    set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES st_menu.pc)
    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/st_menu.pc DESTINATION lib/pkgconfig)
endif (CMAKE_INSTALL_PREFIX)
